--- a/app/assets/stylesheets/trx_orders.css.scss
+++ b/app/assets/stylesheets/trx_orders.css.scss
@@ -1,3 +1,64 @@
-// Place all the styles related to the trx_orders controller here.
+// Place all the styles related to the orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#deleteProductFromSession, .checkouts {
+	a {
+		text-decoration: none;
+		text-color: white;
+		color: white;
+	}
+}
+
+.checkout{
+	text-align:right;
+}
+
+#subtotal{
+	margin-top:0px;
+}
+
+#co_prodInfo {
+  margin: 5px 0 5px;
+}
+
+#co_prodInfo span {
+  display: block;
+  text-align: left;
+}
+
+#invoice-header
+{
+	padding:0;
+	span, i, b#company{
+		display:block;
+	}
+}
+
+#invoice{
+	span {
+		display: block;
+	}
+	.details{
+		padding:0;
+	}
+	div{
+		margin-bottom:10px;
+	}
+}
+
+div#email_invoice{
+	margin-bottom:10px;
+}
+
+div.buy{
+	form {
+		margin-bottom: 10px;
+	}
+}
+
+.list_purchases_shipaddress{
+	div{
+		margin:0;
+	}
+}
