--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,7 +7,7 @@
 	    <% end %>
 	    <!-- Only the COO, the operations chief, will be able to link his company to a bank account. -->
 	    <% if current_org_person.typ_position_id == 1%>
-	      <li class="sidebar_stripe_settings"><%= link_to "Payment Settings", "#" %></li>
+	      <li class="sidebar_stripe_settings"><%= link_to "Payment Settings", org_people_stripe_settings_path %></li>
 	    <% end %>  
   	</ul>
 
@@ -23,8 +23,8 @@
 	      <% elsif company_typ.typ_company_id == 2 %>
 	        
 	      <% elsif company_typ.typ_company_id == 3 %>
-	        <li class="sidebar_post_items_for_sale"><%= link_to "Post Items For Sale", "#" %></li>
-	        <li class="sidebar_posted_items"><%= link_to "Posted Items", "#" %></li> 
+	        <li class="sidebar_post_items_for_sale"><%= link_to "Post Items For Sale", new_org_product_path %></li>
+	        <li class="sidebar_posted_items"><%= link_to "Posted Items", org_products_path %></li> 
 	        <li class="sidebar_orders"><%= link_to "Order Requests", "#" %></li>
 	        <li class="sidebar_completed_orders"><%= link_to "Completed Orders", "#" %></li>
 	      <% end %>
